--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,3 +9,18 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+
+.start-screen {
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+    margin-top: 100px;
+    background-color: lightcoral;
+    font-weight: bold;
+    position: absolute;
+    width: 500px;
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 2em;
+}
