--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,14 @@ body {
     border-radius: 2em;
 }
 
+.vegan {
+    position: absolute;
+    background-image: url('/src/images/slim_vegan_man-removebg-preview.png');
+    width: 120px;
+    height: 220px;
+    background-size: cover;
+}
+
 .hidden {
     display: none;
 }
