spawn apples and make them appear in random position

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,12 @@ body {
     background-size: cover;
 }
 
+.apple {
+    position: absolute;
+    background-image: url('/src/images/apple.png');
+    background-size: cover;
+}
+
 .hidden {
     display: none;
 }
