--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,8 +10,12 @@ body {
     height: 100vh;
 }
 
-
 .start-screen {
+    width: 100%;
+    height: 100%;
+}
+
+.start-screen > button {
     text-align: center;
     font-size: 30px;
     padding: 20px;
@@ -23,7 +27,17 @@ body {
     left: 50%;
     transform: translate(-50%);
     border-radius: 2em;
+    border: none;
 }
+ .start-screen img{
+    padding: 300px;
+    position: absolute;
+    width: 500px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+ 
 
 .play-screen {
     width: 100%;
