--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,11 +8,13 @@ body {
     background: rgb(13, 185, 45);  
     width: 100vw;
     height: 100vh;
+    margin: 0;
 }
 
 .start-screen {
     width: 100%;
     height: 100%;
+    margin: 0;
 }
 
 .start-screen > button {
